aknginx.yaml
apiVersion: v1

kind: Pod

metadata:

  name: shell-demo

spec:

  volumes:

  - name: shared-data

    emptyDir: {}

  containers:

  - name: nginx

    image: nginx

    volumeMounts:

    - name: shared-data

      mountPath: /usr/share/nginx/html

  hostNetwork: true

  dnsPolicy: Default
