frontend-deployment.yaml
---

apiVersion: apps/v1

kind: Deployment

metadata:

  name: frontend

spec:

  selector:

    matchLabels:

      app: hello

      tier: frontend

      track: stable

  replicas: 1

  template:

    metadata:

      labels:

        app: hello

        tier: frontend

        track: stable

    spec:

      containers:

        - name: nginx

          image: "gcr.io/google-samples/hello-frontend:1.0"

          lifecycle:

            preStop:

              exec:

                command: ["/usr/sbin/nginx","-s","quit"]

...
