lesson-5-lab-sol-backup.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: production
spec: {}
status: {}
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: my-prod-nginx
  name: my-prod-nginx
  namespace: production
spec:
  containers:
  - image: nginx
    name: my-prod-nginx
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
