lesson6lab.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-app
  labels:
    name: secret-app
spec:
  restartPolicy: OnFailure
  containers:
  - name: secret-app
    image: busybox
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
      requests:
        memory: "64Mi"
