memory-defaults-pod-2.yaml
apiVersion: v1

kind: Pod

metadata:

  name: default-mem-demo-2

spec:

  containers:

  - name: default-mem-demo-2-ctr

    image: nginx

    resources:

      limits:

        memory: "1Gi"
