mybusybox.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: akbusybox
  name: akbusybox
spec:
  containers:
  - args:
    - sleep
    - "3600"
    image: busybox
    name: akbusybox
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
