qos-best-effort-pod.yaml
apiVersion: v1

kind: Pod

metadata:

  name: qos-best-effort-demo

  namespace: qos-example

spec:

  containers:

  - name: qos-besteffort-pod-demo

    image: nginx
