qos-burstable-pod.yaml
apiVersion: v1

kind: Pod

metadata:

  name: qos-burstale-demo

  namespace: qos-example

spec:

  containers:

  - name: qos-bustable-demo

    image: nginx

    resources:

      limits:

        memory: "200Mi"


      requests:

        memory: "100Mi"
