r1.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    RRR: tom
    TOI: india
  name: r1busybox
spec:
  containers:
  - command:
    - sleep
    - "1000"
    image: busybox
    name: r1busybox
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
