tibusybox.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    day: sunday
    month: April-2023
  name: tibusybox
spec:
  containers:
  - command:
    - sleep
    - "1000"
    image: busybox
    name: tibusybox
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
