update-labels-nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: hazelcast
    env: prod
  name: updatelabelsnginx
spec:
  containers:
  - image: nginx
    name: updatelabelsnginx
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
