backend-service.yaml
---

apiVersion: v1

kind: Service

metadata:

  name: hello

spec:

  selector:

    app: hello

    tier: backend

  ports:

  - protocol: TCP

    port: 80

    targetPort: http

...
