frontend-service.yaml
---

apiVersion: v1

kind: Service

metadata:

  name: frontend

spec:

  selector:

    app: hello

    tier: frontend

  ports:

  - protocol: "TCP"

    port: 80

    targetPort: 80

  type: LoadBalancer
  externalIPs:
  - 192.168.49.2
...
